--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gsap": "^3.9.1",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-code-block": "^1.0.0",
     "react-code-blocks": "^0.1.6",
+    "react-confetti": "^6.2.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -28,6 +30,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.5.1",
     "remark-gfm": "^4.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
