--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-lazyload": "^3.2.1",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
